--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,92 @@
 [versions]
 agp = "8.8.0"
+androidNetworking = "1.0.4"
+androidribbon = "1.0.4"
+autofittextview = "0.2.1"
+blurry = "4.0.1"
+calligraphy3 = "3.1.1"
+cardview = "1.0.0"
+conceal = "2.0.2"
+dagger = "2.55"
+glide = "4.16.0"
+gson = "2.12.1"
+guava = "33.4.0-jre"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+lifecycleViewmodel = "2.8.7"
+multidex = "2.0.1"
+okhttp = "5.0.0-alpha.14"
+tapsellPlus = "2.3.0"
+zarinpal = "0.6.3"
+picasso = "2.71828"
+retrofit = "2.11.0"
+switchButton = "2.1.0"
+lottie = "6.6.2"
+tedpermissionNormal = "3.4.2"
+yoyo = "2.4"
 material = "1.12.0"
 activity = "1.10.0"
 constraintlayout = "2.2.0"
+scalableSize = "1.1.1"
+shimmerlayout = "2.1.0"
+transitionseverywhere = "2.1.0"
+viewpump = "2.0.3"
+googleGmsGoogleServices = "4.4.2"
+firebaseMessaging = "24.1.0"
+firebaseInappmessagingDisplay = "21.0.1"
+firebaseCrashlytics = "19.4.0"
+googleFirebaseCrashlytics = "3.0.2"
+firebaseAnalytics = "22.2.0"
 
 [libraries]
+android-networking = { module = "com.github.amitshekhariitbhu.Fast-Android-Networking:android-networking", version.ref = "androidNetworking" }
+androidribbon = { module = "com.github.skydoves:androidribbon", version.ref = "androidribbon" }
+autofittextview = { module = "me.grantland:autofittextview", version.ref = "autofittextview" }
+blurry = { module = "jp.wasabeef:blurry", version.ref = "blurry" }
+calligraphy3 = { module = "io.github.inflationx:calligraphy3", version.ref = "calligraphy3" }
+cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
+conceal = { module = "com.facebook.conceal:conceal", version.ref = "conceal" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycleViewmodel" }
+lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodel" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+multidex = { module = "androidx.multidex:multidex", version.ref = "multidex" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+tapsell-plus = { module = "ir.tapsell.plus:tapsell-plus-sdk-android", version.ref = "tapsellPlus" }
+zarinpal = { module = "com.zarinpal:payment-provider", version.ref = "zarinpal" }
+picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+switch-button = { module = "com.kyleduo.switchbutton:library", version.ref = "switchButton" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
+tedpermission = { module = "io.github.ParkSangGwon:tedpermission-normal", version.ref = "tedpermissionNormal" }
+yoyo-easing = { module = "com.daimajia.easing:library", version.ref = "yoyo" }
+yoyo-library = { module = "com.daimajia.androidanimations:library", version.ref = "yoyo" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+sdp-scalable = { module = "com.intuit.sdp:sdp-android", version.ref = "scalableSize" }
+shimmerlayout = { module = "io.supercharge:shimmerlayout", version.ref = "shimmerlayout" }
+ssp-scalable = { module = "com.intuit.ssp:ssp-android", version.ref = "scalableSize" }
+transitionseverywhere = { module = "com.andkulikov:transitionseverywhere", version.ref = "transitionseverywhere" }
+viewpump = { module = "io.github.inflationx:viewpump", version.ref = "viewpump" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+firebase-inappmessaging-display = { group = "com.google.firebase", name = "firebase-inappmessaging-display", version.ref = "firebaseInappmessagingDisplay" }
+firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics", version.ref = "firebaseCrashlytics" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics", version.ref = "firebaseAnalytics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
+google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "googleFirebaseCrashlytics" }
 
